syntax = "proto3";

option java_package = "grpc.smartcameras";
option java_multiple_files = true;
option java_outer_classname = "SmartCamerasImpl";


service smartCameras {

  // bi-directional steam
  rpc smartDoorbell (stream ringRequest) returns (stream ringResponse) {}
  
  // bi-directional stream
  rpc IPCamera (stream videoRequest) returns (stream videoResponse) {}
    
}

message ringRequest {
  string ring = 1;
}

message ringResponse {
  string respond = 1;
}

message videoRequest {
	string video = 1;
}

message videoResponse {
	string watchVideo = 1;
}